Listado de canciones agregadas y buscador

--- a/app-tp1/src/app/app.component.html
+++ b/app-tp1/src/app/app.component.html
@@ -1,9 +1,6 @@
 <div class="container">
-    <h1>
-        TP1 - TTADS
-    </h1>
+	<h1>
+		{{ title.getTitle() }}
+	</h1>
     <router-outlet></router-outlet>
 </div>
-
-
-
