--- a/app-tp1/src/app/app.component.css
+++ b/app-tp1/src/app/app.component.css
@@ -1,4 +1,10 @@
 #top-bar {
     height: 100px;
     width: 100%;
+    background: #508991;
+    color: #172A3A;
+}
+
+#application-container {
+    background-color: #172A3A;
 }
