--- a/app-tp1/src/app/app.component.html
+++ b/app-tp1/src/app/app.component.html
@@ -1,9 +1,11 @@
-<ngx-loading-bar></ngx-loading-bar>
-<div id="top-bar">
-	<span class="pull-right" *ngIf="spotify.userData && spotify.userData.display_name">Usuario actual <a [href]="spotify.userData.external_urls.spotify">{{ spotify.userData.display_name }}</a></span>
-	<span class="pull-right" *ngIf="spotify.userData && !spotify.userData.display_name">Usuario actual <a [href]="spotify.userData.external_urls.spotify">{{ spotify.userData.id }}</a></span>
-</div>
 <div id="application-container">
+	<ngx-loading-bar></ngx-loading-bar>
+	<div id="top-bar">
+		<div class="container">
+			<span class="pull-right" *ngIf="spotify.userData && spotify.userData.display_name">Usuario actual <a [href]="spotify.userData.external_urls.spotify">{{ spotify.userData.display_name }}</a></span>	
+			<span class="pull-right" *ngIf="spotify.userData && !spotify.userData.display_name">Usuario actual <a [href]="spotify.userData.external_urls.spotify">{{ spotify.userData.id }}</a></span>
+		</div>
+	</div>
 	<div class="container">
 		<h1>
 			{{ title.getTitle() }}
