--- a/app-tp1/src/app/song-details/song-details.component.css
+++ b/app-tp1/src/app/song-details/song-details.component.css
@@ -3,3 +3,13 @@
     border-radius: 5px;
     padding: 5px;
 }
+
+.details-container {
+    margin-bottom: 25px;
+}
+
+@media (max-width: 768px) {
+    .track-data {
+        margin-bottom: 10px;
+    }
+}
